--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/abartelsmeier/language-splus.git"
+    "url": "https://github.com/abartelsmeier/language-splus.git"
   },
   "license": "MIT",
   "engines": {
